src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_addmm_(value self, value mat1, value mat2, value beta, value alpha);
value atg_addmm_out(value out, value self, value mat1, value mat2, value beta, value alpha);
value atg_addmv(value self, value mat, value vec, value beta, value alpha);
value atg_addmv_(value self, value mat, value vec, value beta, value alpha);
value atg_addmv_out(value out, value self, value mat, value vec, value beta, value alpha);
value atg_addr(value self, value vec1, value vec2, value beta, value alpha);
value atg_addr_(value self, value vec1, value vec2, value beta, value alpha);
value atg_addr_out(value out, value self, value vec1, value vec2, value beta, value alpha);
value atg_adjoint(value self);
value atg_affine_grid_generator(value theta, value size, int align_corners);
value atg_affine_grid_generator_backward(value grad, value size, int align_corners);
value atg_affine_grid_generator_out(value out, value theta, value size, int align_corners);
value atg_alias(value self);
value atg_alias_copy(value self);
value atg_alias_copy_out(value out, value self);
value atg_align_as(value self, value other);
value atg_align_tensors(value tensors);
value atg_all(value self);
value atg_all_all_out(value out, value self);
value atg_all_dim(value self, int64_t dim, int keepdim);
value atg_all_dims(value self, value dim, int keepdim);
value atg_all_dims_out(value out, value self, value dim, int keepdim);
value atg_all_out(value out, value self, int64_t dim, int keepdim);
value atg_allclose(value self, value other, double rtol, double atol, int equal_nan);
value atg_alpha_dropout(value input, double p, int train);
value atg_alpha_dropout_(value self, double p, int train);
value atg_amax(value self, value dim, int keepdim);
value atg_amax_out(value out, value self, value dim, int keepdim);
value atg_amin(value self, value dim, int keepdim);
value atg_amin_out(value out, value self, value dim, int keepdim);
value atg_aminmax(value self, value dim, int keepdim);
value atg_aminmax_out(value min, value max, value self, value dim, int keepdim);
value atg_angle(value self);
value atg_angle_out(value out, value self);
value atg_any(value self);
value atg_any_all_out(value out, value self);
value atg_any_dim(value self, int64_t dim, int keepdim);
value atg_any_dims(value self, value dim, int keepdim);
value atg_any_dims_out(value out, value self, value dim, int keepdim);
value atg_any_out(value out, value self, int64_t dim, int keepdim);
value atg_arange(value end, int options_kind, int options_device);
value atg_arange_start(value start, value end, int options_kind, int options_device);
value atg_arange_start_step(value start, value end, value step, int options_kind, int options_device);
value atg_arccos(value self);
value atg_arccos_(value self);
value atg_arccos_out(value out, value self);
value atg_arccosh(value self);
value atg_arccosh_(value self);
value atg_arccosh_out(value out, value self);
value atg_arcsin(value self);
value atg_arcsin_(value self);
value atg_arcsin_out(value out, value self);
value atg_arcsinh(value self);
value atg_arcsinh_(value self);
value atg_arcsinh_out(value out, value self);
value atg_arctan(value self);
value atg_arctan2(value self, value other);
value atg_arctan2_(value self, value other);
value atg_arctan2_out(value out, value self, value other);
value atg_arctan_(value self);
value atg_arctan_out(value out, value self);
value atg_arctanh(value self);
value atg_arctanh_(value self);
value atg_arctanh_out(value out, value self);
value atg_argmax(value self, value dim, int keepdim);
value atg_argmax_out(value out, value self, value dim, int keepdim);
value atg_argmin(value self, value dim, int keepdim);
value atg_argmin_out(value out, value self, value dim, int keepdim);
value atg_argsort(value self, int64_t dim, int descending);
value atg_argsort_stable(value self, int stable, int64_t dim, int descending);
value atg_argsort_stable_out(value out, value self, int stable, int64_t dim, int descending);
value atg_argwhere(value self);
value atg_as_strided(value self, value size, value stride, value storage_offset);
value atg_as_strided_(value self, value size, value stride, value storage_offset);
value atg_as_strided_copy(value self, value size, value stride, value storage_offset);
value atg_as_strided_copy_out(value out, value self, value size, value stride, value storage_offset);
value atg_as_strided_scatter(value self, value src, value size, value stride, value storage_offset);
value atg_as_strided_scatter_out(value out, value self, value src, value size, value stride, value storage_offset);
value atg_asin(value self);
value atg_asin_(value self);
value atg_asin_out(value out, value self);
value atg_asinh(value self);
value atg_asinh_(value self);
value atg_asinh_out(value out, value self);
value atg_atan(value self);
value atg_atan2(value self, value other);
value atg_atan2_(value self, value other);
value atg_atan2_out(value out, value self, value other);
value atg_atan_(value self);
value atg_atan_out(value out, value self);
value atg_atanh(value self);
value atg_atanh_(value self);