src/bindings/torch_bindings_generated1.ml


  let stubs_addmm_ =
    foreign
      "atg_addmm_"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addmm_out =
    foreign
      "atg_addmm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addmv =
    foreign
      "atg_addmv"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addmv_ =
    foreign
      "atg_addmv_"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addmv_out =
    foreign
      "atg_addmv_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addr =
    foreign
      "atg_addr"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addr_ =
    foreign
      "atg_addr_"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addr_out =
    foreign
      "atg_addr_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_adjoint = foreign "atg_adjoint" (gc_tensor @-> returning raw_tensor)

  let stubs_affine_grid_generator =
    foreign
      "atg_affine_grid_generator"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_affine_grid_generator_backward =
    foreign
      "atg_affine_grid_generator_backward"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_affine_grid_generator_out =
    foreign
      "atg_affine_grid_generator_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_alias = foreign "atg_alias" (gc_tensor @-> returning raw_tensor)
  let stubs_alias_copy = foreign "atg_alias_copy" (gc_tensor @-> returning raw_tensor)

  let stubs_alias_copy_out =
    foreign "atg_alias_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_align_as =
    foreign "atg_align_as" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_align_tensors =
    foreign "atg_align_tensors" (ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_all = foreign "atg_all" (gc_tensor @-> returning raw_tensor)

  let stubs_all_all_out =
    foreign "atg_all_all_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_all_dim =
    foreign "atg_all_dim" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_all_dims =
    foreign
      "atg_all_dims"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_all_dims_out =
    foreign
      "atg_all_dims_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_all_out =
    foreign
      "atg_all_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_allclose =
    foreign
      "atg_allclose"
      (gc_tensor @-> gc_tensor @-> double @-> double @-> int @-> returning bool)
  ;;

  let stubs_alpha_dropout =
    foreign "atg_alpha_dropout" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_alpha_dropout_ =
    foreign "atg_alpha_dropout_" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_amax =
    foreign "atg_amax" (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_amax_out =
    foreign
      "atg_amax_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_amin =
    foreign "atg_amin" (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_amin_out =
    foreign
      "atg_amin_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_aminmax =
    foreign
      "atg_aminmax"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> int @-> returning void)
  ;;

  let stubs_aminmax_out =
    foreign
      "atg_aminmax_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_angle = foreign "atg_angle" (gc_tensor @-> returning raw_tensor)

  let stubs_angle_out =
    foreign "atg_angle_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_any = foreign "atg_any" (gc_tensor @-> returning raw_tensor)

  let stubs_any_all_out =
    foreign "atg_any_all_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_any_dim =
    foreign "atg_any_dim" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_any_dims =
    foreign
      "atg_any_dims"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_any_dims_out =
    foreign
      "atg_any_dims_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_any_out =
    foreign
      "atg_any_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_arange = foreign "atg_arange" (scalar @-> int @-> int @-> returning raw_tensor)

  let stubs_arange_start =
    foreign "atg_arange_start" (scalar @-> scalar @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_arange_start_step =
    foreign
      "atg_arange_start_step"
      (scalar @-> scalar @-> scalar @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_arccos = foreign "atg_arccos" (gc_tensor @-> returning raw_tensor)
  let stubs_arccos_ = foreign "atg_arccos_" (gc_tensor @-> returning raw_tensor)

  let stubs_arccos_out =
    foreign "atg_arccos_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_arccosh = foreign "atg_arccosh" (gc_tensor @-> returning raw_tensor)
  let stubs_arccosh_ = foreign "atg_arccosh_" (gc_tensor @-> returning raw_tensor)

  let stubs_arccosh_out =
    foreign "atg_arccosh_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_arcsin = foreign "atg_arcsin" (gc_tensor @-> returning raw_tensor)
  let stubs_arcsin_ = foreign "atg_arcsin_" (gc_tensor @-> returning raw_tensor)

  let stubs_arcsin_out =
    foreign "atg_arcsin_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_arcsinh = foreign "atg_arcsinh" (gc_tensor @-> returning raw_tensor)
  let stubs_arcsinh_ = foreign "atg_arcsinh_" (gc_tensor @-> returning raw_tensor)

  let stubs_arcsinh_out =
    foreign "atg_arcsinh_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_arctan = foreign "atg_arctan" (gc_tensor @-> returning raw_tensor)

  let stubs_arctan2 =
    foreign "atg_arctan2" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_arctan2_ =
    foreign "atg_arctan2_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_arctan2_out =
    foreign
      "atg_arctan2_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_arctan_ = foreign "atg_arctan_" (gc_tensor @-> returning raw_tensor)

  let stubs_arctan_out =
    foreign "atg_arctan_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_arctanh = foreign "atg_arctanh" (gc_tensor @-> returning raw_tensor)
  let stubs_arctanh_ = foreign "atg_arctanh_" (gc_tensor @-> returning raw_tensor)

  let stubs_arctanh_out =
    foreign "atg_arctanh_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_argmax =
    foreign "atg_argmax" (gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;
end

module C3 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_argmax_out =
    foreign
      "atg_argmax_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_argmin =
    foreign "atg_argmin" (gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_argmin_out =
    foreign
      "atg_argmin_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_argsort =
    foreign "atg_argsort" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_argsort_stable =
    foreign
      "atg_argsort_stable"
      (gc_tensor @-> int @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_argsort_stable_out =
    foreign
      "atg_argsort_stable_out"
      (gc_tensor @-> gc_tensor @-> int @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_argwhere = foreign "atg_argwhere" (gc_tensor @-> returning raw_tensor)

  let stubs_as_strided =
    foreign
      "atg_as_strided"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_as_strided_ =
    foreign
      "atg_as_strided_"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_as_strided_copy =
    foreign
      "atg_as_strided_copy"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_as_strided_copy_out =
    foreign
      "atg_as_strided_copy_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_as_strided_scatter =
    foreign
      "atg_as_strided_scatter"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_as_strided_scatter_out =
    foreign
      "atg_as_strided_scatter_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_asin = foreign "atg_asin" (gc_tensor @-> returning raw_tensor)
  let stubs_asin_ = foreign "atg_asin_" (gc_tensor @-> returning raw_tensor)

  let stubs_asin_out =
    foreign "atg_asin_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_asinh = foreign "atg_asinh" (gc_tensor @-> returning raw_tensor)
  let stubs_asinh_ = foreign "atg_asinh_" (gc_tensor @-> returning raw_tensor)

  let stubs_asinh_out =
    foreign "atg_asinh_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_atan = foreign "atg_atan" (gc_tensor @-> returning raw_tensor)
  let stubs_atan2 = foreign "atg_atan2" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_atan2_ =
    foreign "atg_atan2_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_atan2_out =
    foreign
      "atg_atan2_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_atan_ = foreign "atg_atan_" (gc_tensor @-> returning raw_tensor)

  let stubs_atan_out =
    foreign "atg_atan_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_atanh = foreign "atg_atanh" (gc_tensor @-> returning raw_tensor)
  let stubs_atanh_ = foreign "atg_atanh_" (gc_tensor @-> returning raw_tensor)
